# cvros0cpp

./: CMakeLists.txt  README.md  package.xml
launch/: cntWhitePixels.launch  draw1Circle.launch  opencv0.launch  view_C.launch  view_OO.launch
src/: cntWhitePixels.cpp  draw1Circle.cpp  opencv0.cpp  view_C.cpp  view_OO.cpp
